automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
 
   <body>
     <header>
+      <nav>
       <a>New Questions</a>
       <a>About</a>
+    </nav>
     <h3><a>Icebreakers</a></h3>
-            
+
 
     </header>
   </body>
