automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
   <body>
     <header>
       <nav>
-      <a>New Questions</a>
-      <a>About</a>
+        <ul>
+          <li><a>New Questions</a></li>
+          <li><a>About</a></li>
+      </ul>
     </nav>
     <h3><a>Icebreakers</a></h3>
 
